# mpirical

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  MANIFEST.in  README.md  README.rst  environment-dev.yml  environment.yml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: check-tests-coverage.sh  config-old.yml  config.yml  docs.sh  env-2.7-mpich.yml  env-2.7-openmpi.yml  env-3.6-mpich.yml  env-3.6-openmpi.yml  env-3.7-mpich.yml  env-3.7-openmpi.yml  env-3.8-mpich.yml  env-3.8-openmpi.yml  env-mpich.yml  env-openmpi.yml  install.sh  installenv.sh  linting.sh  test-docs.sh  test-linting.sh  test-unit-coverage.sh  test-unit-only.sh  test-unit-openmpi.sh  tests-only.sh
.github/workflows/: linting.yml
ci/: install-circle.sh
decorm/: __init__.py  _version.py  decorator.py  exceptions.py  mpiruntask.py
decorm/tests/: test_decorator.py  test_mpiruntask.py  test_serialization.py  test_tasks.py
decormpi/: __init__.py  _version.py  decorator.py  mpirun_task_file.py  mpiruntask.py  serialization.py
decormpi/tests/: test_decorator.py  test_mpirun_task_file.py  test_mpiruntask.py  test_serialization.py  (+1 more)
decorum/: serialization.py
docs/: env.yml  environment.yml
mpipytest/: __init__.py  _dill.py  _exec_dill.py  decorator.py  serialization.py  tasks.py
mpirical/: __init__.py  _version.py  decorator.py  exceptions.py  mpiruntask.py  serialization.py
requirements/: development.txt  documentation.txt  production.txt
tests/: test_decorator.py
(+17 files in other folders)
