[metadata]
description-file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = mpirical/_version.py
versionfile_build = mpirical/_version.py
tag_prefix =
parentdir_prefix = mpirical-

[tool:pytest]
markers =
    mpiunstable: Tests that are unstable on openmpi

[flake8]
max-line-length = 120
max-complexity = 10
ignore = E722
exclude =
    .git
    ./versioneer.py
    ./mpirical/_version.py
    ./mpirical/__init__.py
